# optixdvr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindOptiX.cmake  configure_optix.cmake
ext/: CMakeLists.txt
ext/glfw/: CMakeLists.txt
src/: CMakeLists.txt
src/apps/cli/: main.cpp
src/apps/nuklear/: nuklear.h  nuklear_glfw_gl4.h  optixdvr_nuklear_app.cpp  overview.cpp  overview.hpp  renderpanel.cpp  renderpanel.hpp
src/apps/nuklear/controls/: brickpool.hpp  camera.hpp  subdivision.hpp  transferfunction.hpp
src/optixdvr/: camera.hpp  optixdvr.cpp  optixdvr.hpp  optixdvr_instance.cpp  optixdvr_instance.hpp
src/optixdvr/programs/: DRand48.h  aabb.cu  brickpoolentry.h  miss.cu  prd.h  raygen.cu  vec.h  vec2.h  vec2ops.h  vec3.h  vec3ops.h  vec4.h  vec4ops.h  volume.cu  volume_shading.cu
src/optixdvr/utils/: argparse.cpp  argparse.hpp  glutils.hpp  savePPM.h  stats.hpp  utils.h
src/optixdvr/volume/: brickedvolume.cpp  brickedvolume.hpp  brickpool.cpp  brickpool.hpp  mhdreader.hpp  optixbrickpool.cpp  optixbrickpool.hpp  optixtransferfunction.hpp  transferfunction.cpp  transferfunction.hpp  volume.hpp
src/pybind/: CMakeLists.txt  optixdvr_py.cpp  optixdvrbindings.cpp
